bullets fix on firefox

--- a/css/light/home.css
+++ b/css/light/home.css
@@ -174,6 +174,7 @@
 }
 #page-content .bottom .list {
 	position: absolute;
+	list-style-type: none;;
 	margin-left: 0;
 	left: 100px;
 	top: 60px;
